[project]
dynamic = ["version"]
name = "pysetl"
description = "A PySpark ETL Framework"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
  {name = "Jhosse Paul Marquez Ruiz", email = "jpaul.marquez.ruiz@gmail.com"}
]
keywords = [
    "pyspark",
    "spark",
    "etl",
    "data engineering",
    "data pipeline",
    "data processing",
    "workflow",
    "type-safe",
    "python",
    "big data",
    "data analysis",
    "data science",
    "configuration",
    "pipeline",
    "framework",
    "automation",
    "analytics"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Database",
    "Topic :: Utilities",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: Apache Software License",
    "Typing :: Typed",
    "Framework :: Pytest",
    "Framework :: MkDocs",
    "Natural Language :: English"
]
urls = { Home = "https://github.com/JhossePaul/pysetl", Source = "https://github.com/JhossePaul/pysetl" }

requires-python = ">=3.9,<3.14"
dependencies = [
    "typedspark>=1.5.3,<2.0.0",
    "pyarrow>=15.0.0,<22.0.0",
    "pydantic>=2.4.2,<3.0.0",
    "typing-extensions>=4.13.0,<5.0.0"
]

[project.optional-dependencies]
pyspark = [
    "pyspark[sql]>=3.4,<5.0.0"
]

[tool.hatch.envs.default]
description = """
Default development environment.
"""
installer = "uv"
features = [ "pyspark" ]
dependencies = [
    "pre-commit>=4.2.0,<5.0.0",
    "ruff>=0.4.4,<1.0.0",
    "mypy>=1.6.1,<2.0.0",
    "pytest>=7.4.0,<8.0.0",
]

[tool.hatch.envs.default.scripts]
type = "mypy src/pysetl"
lint = "ruff check src/pysetl"
format = "ruff format src/pysetl"

[tool.hatch.envs.hatch-test]
description = """
Testing tools over multiple Python versions.
"""
installer = "uv"
features = [ "pyspark" ]
extra-dependencies = [
    "coverage-conditional-plugin>=0.9.0,<1.0.0",
]

[tool.hatch.envs.hatch-test.scripts]
run = "pytest{env:HATCH_TEST_ARGS:} {args}"
run-cov = "coverage run -m pytest{env:HATCH_TEST_ARGS:} {args}"
cov-combine = "coverage combine"
cov-report = "coverage report --show-missing --skip-covered && coverage lcov"

[[tool.hatch.envs.hatch-test.matrix]]
python = ["3.9", "3.10", "3.11", "3.12", "3.13"]

[tool.hatch.envs.docs]
description = """
Documentation builder.
"""
installer = "uv"
dependencies = [
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]",
    "mkdocs-autorefs",
    "mkdocs-section-index",
    "mkdocs-literate-nav",
    "mkdocs-git-revision-date-localized-plugin",
    "mkdocs-git-authors-plugin",
    "mkdocs-minify-plugin",
    "mkdocs-awesome-pages-plugin",
    "mkdocs-glightbox",
    "mkdocs-include-markdown-plugin",
    "pymdown-extensions",
]

[tool.hatch.envs.docs.scripts]
docs = "mkdocs build"
serve = "mkdocs serve"

[tool.hatch.envs.security]
description = """
Security tools.
"""
installer = "uv"
detached = true
dependencies = [
    "bandit>=1.7.0,<2.0.0",
    "safety>=3.0.0,<4.0.0",
    "pip-audit>=2.6.1,<3.0.0"
]

[tool.hatch.envs.security.scripts]
all = "bandit -r src/pysetl && safety scan && security && audit"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.sdist]
include = ["src/pysetl", "README.md", "LICENSE"]

[tool.hatch.build.targets.wheel]
include = ["src/pysetl", "README.md", "LICENSE"]

[tool.hatch.build]
packages = ["src/pysetl"]
dev-mode-dirs = ["src"]

[tool.coverage.run]
concurrency=["multiprocessing"]
source=["src"]
parallel=true
branch=true
plugins = ["coverage_conditional_plugin"]
omit=[
    "src/pysetl/utils/mixins/can_*.py"
]

[tool.coverage.coverage_conditional_plugin.rules]
py-gt-310 = "sys_version_info > (3, 10)"
py-lt-311 = "sys_version_info < (3, 11)"

[tool.coverage.report]
skip_covered=true
skip_empty=true
show_missing=true
fail_under=100

[tool.coverage.lcov]
output="lcov.info"

[tool.pytest.ini_options]
markers = [
    "spark: needs a SparkSession",
]
